Wrap testimonial images inside divs to fix problem with circle not appearing correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,7 @@ ul {
 .testimonial-title {
     margin-top: 10px;
     padding: 2%;
+    text-align:center;
 }
 
 .testimonials div {
@@ -218,7 +219,6 @@ ul {
     width: 100px;
     height: auto;
     border-radius: 50%;
-    padding-top: 5%;
 }
 
 /* Courses Page */
